spade-tests/src/snapshots/spade_tests__parser__register_count_is_required.snap
---
source: spade-tests/src/parser.rs
---
pipeline(3) main(x: X) -> int<8> {
    reg *;
}


error: Expected register count
  ┌─ testinput:2:10
  │
2 │     reg *;
  │          ^ Expected register count
  │
  = Found ;
  = Register count can only be fixed integers


